# synthcity_on_pytorch

./: .gitignore  README.md  pyproject.toml  test_sdv_cli.py  test_synthcity_cli.py  test_synthcity_tvae.py
